--- a/Activities/Zerodha/index.html
+++ b/Activities/Zerodha/index.html
@@ -35,7 +35,7 @@
 
     
 
-    <div class="main" style="display: flex; justify-content: center; padding-top: 20px; background-image: linear-gradient(to bottom, #ff7e5f, #feb47b);">
+    <div class="main" style="display: flex; justify-content: center; padding-top: 20px;">
         <img width="1000" src="./resources/landing.png" alt="">
 
     </div>
